Update bom plugins version, add some missing plugins.
Add plugins to projects